# eprompt-fe

./: .env.example  .gitignore  CHANGELOG.md  README.md  RELEASE.md  eslint.config.js  index.html  instructions.md  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.js
.github/workflows/: deploy.yml  release.yml
scripts/: release.sh
src/: App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs  main.rs
src/components/: ApiTest.jsx  Playground.jsx  PromptVault.jsx  RefineToolbar.jsx  SemanticSearch.jsx  TemplateLibrary.jsx
src/components/layout/: Layout.jsx  Navbar.jsx  Sidebar.jsx  SimpleLayout.jsx
src/components/ui/: Button.jsx  Card.jsx  ExportModal.jsx  Input.jsx  Modal.jsx  PermissionsDialog.jsx  Textarea.jsx  Toast.jsx  index.jsx
src/components/ui/Toast/: Toast.jsx
src/data/: templates.js
src/hooks/: index.js  useToast.js
src/lib/: api.js  exportUtils.js  utils.js
src/pages/: AppLayout.jsx  AppLayoutMinimal.jsx  HomePage.jsx  PromptsPage.jsx  SettingsPage.jsx  Spotlight.jsx
src/router/: index.jsx
src/spotlight/: index.html  input.css  liquid.css  main.css
src/store/: playgroundStore.js  promptStore.js  userStore.js
